[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Font/kongtext.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/nine_patch_2x.png" type="Texture" id=2]
[ext_resource path="res://Assets/Buttons/button_play.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/button_controls.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/button_instructions.png" type="Texture" id=5]
[ext_resource path="res://Assets/Buttons/button_play_pressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/Buttons/button_instructions_pressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/Buttons/button_controls_pressed.png" type="Texture" id=8]
[ext_resource path="res://Scenes/MainMenuUI.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 8
font_data = ExtResource( 1 )

[node name="MainMenuUI" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -120.0
margin_right = 180.0
margin_bottom = 120.0
script = ExtResource( 9 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 360.0
margin_bottom = 240.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 96, 96 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 360.0
margin_bottom = 240.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 360.0
margin_bottom = 240.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 20.0
margin_top = 47.0
margin_right = 340.0
margin_bottom = 192.0

[node name="LabelTitle" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 8 )
text = "SPOOKY SPEECH SPELLS"

[node name="LabelSubtitle" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 320.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 9 )
text = "
A GAME BY NIKOLA WHALLON
POWERED BY DEEPGRAM
"
align = 1

[node name="CenterPlay" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 320.0
margin_bottom = 89.0

[node name="ButtonPlay" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer/CenterPlay"]
margin_left = 104.0
margin_right = 216.0
margin_bottom = 24.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )

[node name="CenterControls" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 320.0
margin_bottom = 117.0

[node name="ButtonControls" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer/CenterControls"]
margin_left = 104.0
margin_right = 216.0
margin_bottom = 24.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )

[node name="CenterInstructions" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 320.0
margin_bottom = 145.0

[node name="ButtonInstructions" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer/CenterInstructions"]
margin_left = 104.0
margin_right = 216.0
margin_bottom = 24.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterPlay/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterControls/ButtonControls" to="." method="_on_ButtonControls_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterInstructions/ButtonInstructions" to="." method="_on_ButtonInstructions_pressed"]
